[package]
name = "navigation_toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.32"
nalgebra = {version = "0.32", default-features = false, features = ["libm"]}
approx = "0.5.1"
