[package]
name = "navigation_toolbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/erlendbasso/navigation_toolbox"
repository = "https://github.com/erlendbasso/navigation_toolbox"
documentation = "http://erlendbasso.github.io/utm"
keywords = ["navigation", "gnss", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.32"
nalgebra = {version = "0.32", default-features = false, features = ["libm"]}
approx = "0.5.1"
libm = "0.2"
