[package]
name = "navigation_toolbox"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/erlendbasso/navigation_toolbox"
repository = "https://github.com/erlendbasso/navigation_toolbox"
documentation = "http://erlendbasso.github.io/utm"
keywords = ["navigation", "gnss", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.32"
nalgebra = {version = "0.34", default-features = false, features = ["libm"]}
libm = "0.2"

[dev-dependencies]
approx = "0.5.1"
